@@ -3,37 +3,23 @@ plugins {
     id 'org.jetbrains.intellij' version '0.6.5'
 }
 
-repositories {
-    jcenter()
-}
-
-apply plugin: 'idea'
-
 def jdkVersion = '11.0.9'
 
-idea {
-    project {
-        jdkName = jdkVersion
-        languageLevel = jdkVersion
-    }
-}
-
 allprojects {
-    group 'com.reason'
-}
-
-subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
     apply plugin: 'org.jetbrains.intellij'
 
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
+
+    group 'com.reason'
+
     sourceCompatibility = jdkVersion
     targetCompatibility = jdkVersion
     tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
-
-    repositories {
-        mavenCentral()
-    }
 
     dependencies {
         def powerMockVersion = '2.0.2'
@@ -71,6 +57,35 @@ subprojects {
         }
     }
 
+    version = pluginVersion + '-' + platformVersion
+
+    intellij {
+        pluginName = pluginName
+        type = platformType
+        version = platformVersion
+        plugins = [
+                'java',
+                'JavaScriptLanguage',
+                'com.jetbrains.hackathon.indices.viewer:' + indicesVersion,
+                'PsiViewer:' + psiVersion
+        ]
+    }
+
+    idea.module.generatedSourceDirs += file('gen')
+
+    runIde {
+        systemProperty 'refmtWidth', '120'
+        jvmArgs = [
+                '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED',
+                '-Dcompiler.process.debug.port=5005',
+                '-Xmx1024m'
+        ]
+    }
+
+    verifyPlugin {
+        pluginDirectory 'resources'
+    }
+
     task testCompilation(type: Test, group: 'Verification', dependsOn: [classes, testClasses]) {
         testLogging {
             exceptionFormat = 'full'
@@ -78,8 +93,6 @@ subprojects {
     }
 }
 
-project(':idea-plugin') {
-    dependencies {
-        compile project(':jps-plugin')
-    }
+dependencies {
+    compile project(':jps-plugin')
 }
